Update etc/telegraf.conf for 1.0

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1150,23 +1150,6 @@
 #   command = "passenger-status -v --show=xml"
 
 
-# # Read metrics from one or many pgbouncer servers
-# [[inputs.pgbouncer]]
-#   ## specify address via a url matching:
-#   ##   postgres://[pqgotest[:password]]@localhost:port[/dbname]\
-#   ##       ?sslmode=[disable|verify-ca|verify-full]
-#   ## or a simple string:
-#   ##   host=localhost user=pqotest port=6432 password=... sslmode=... dbname=pgbouncer
-#   ##
-#   ## All connection parameters are optional, except for dbname,
-#   ## you need to set it always as pgbouncer.
-#   address = "host=localhost user=postgres port=6432 sslmode=disable dbname=pgbouncer"
-#
-#   ## A list of databases to pull metrics about. If not specified, metrics for all
-#   ## databases are gathered.
-#   # databases = ["app_production", "testing"]
-
-
 # # Read metrics of phpfpm, via HTTP status page or socket
 # [[inputs.phpfpm]]
 #   ## An array of addresses to gather stats about. Specify an ip or hostname
@@ -1391,6 +1374,61 @@
 # [[inputs.riak]]
 #   # Specify a list of one or more riak http servers
 #   servers = ["http://localhost:8098"]
+
+
+# # Retrieves SNMP values from remote agents
+# [[inputs.snmp]]
+#   agents = [ "127.0.0.1:161" ]
+#   timeout = "5s"
+#   version = 2
+#
+#   # SNMPv1 & SNMPv2 parameters
+#   community = "public"
+#
+#   # SNMPv2 & SNMPv3 parameters
+#   max_repetitions = 50
+#
+#   # SNMPv3 parameters
+#   #sec_name = "myuser"
+#   #auth_protocol = "md5"         # Values: "MD5", "SHA", ""
+#   #auth_password = "password123"
+#   #sec_level = "authNoPriv"      # Values: "noAuthNoPriv", "authNoPriv", "authPriv"
+#   #context_name = ""
+#   #priv_protocol = ""            # Values: "DES", "AES", ""
+#   #priv_password = ""
+#
+#   # measurement name
+#   name = "system"
+#   [[inputs.snmp.field]]
+#     name = "hostname"
+#     oid = ".1.0.0.1.1"
+#   [[inputs.snmp.field]]
+#     name = "uptime"
+#     oid = ".1.0.0.1.2"
+#   [[inputs.snmp.field]]
+#     name = "load"
+#     oid = ".1.0.0.1.3"
+#   [[inputs.snmp.field]]
+#     oid = "HOST-RESOURCES-MIB::hrMemorySize"
+#
+#   [[inputs.snmp.table]]
+#     # measurement name
+#     name = "remote_servers"
+#     inherit_tags = [ "hostname" ]
+#     [[inputs.snmp.table.field]]
+#       name = "server"
+#       oid = ".1.0.0.0.1.0"
+#       is_tag = true
+#     [[inputs.snmp.table.field]]
+#       name = "connections"
+#       oid = ".1.0.0.0.1.1"
+#     [[inputs.snmp.table.field]]
+#       name = "latency"
+#       oid = ".1.0.0.0.1.2"
+#
+#   [[inputs.snmp.table]]
+#     # auto populate table's fields using the MIB
+#     oid = "HOST-RESOURCES-MIB::hrNetworkTable"
 
 
 # # DEPRECATED! PLEASE USE inputs.snmp INSTEAD.
