added -x option for pgrep in procstat

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1350,6 +1350,8 @@
 #   # exe = "nginx"
 #   ## pattern as argument for pgrep (ie, pgrep -f <pattern>)
 #   # pattern = "nginx"
+#   ## match the exact name of the process (ie, pgrep -xf <pattern>)
+#   # exact = false
 #   ## user as argument for pgrep (ie, pgrep -u <user>)
 #   # user = "nginx"
 #
