--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -436,8 +436,10 @@
 #   url = "localhost:5555"
 #   ## transport protocol to use either tcp or udp
 #   transport = "tcp"
-#   ## separator to use between input name and field name in Riemann service name
+#   ## separator to use between measurement name and field name in Riemann service name
 #   separator = " "
+#   ## set measurement name as a Riemann tag instead of prepending it to the Riemann service name
+#   measurement_as_tag = false
 
 
 
