add overwrite tags for Riemann

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -440,7 +440,8 @@
 #   separator = " "
 #   ## set measurement name as a Riemann tag instead of prepending it to the Riemann service name
 #   measurement_as_tag = false
-
+#   ## list of Riemann tags, if specified use these instead of any Telegraf tags
+#   tags = ["telegraf","custom_tag"]
 
 
 ###############################################################################
