add riemann_tag_keys option to specify which tags to send
Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -440,8 +440,8 @@
 #   separator = " "
 #   ## set measurement name as a Riemann tag instead of prepending it to the Riemann service name
 #   measurement_as_tag = false
-#   ## list of Riemann tags, if specified use these instead of any Telegraf tags
-#   tags = ["telegraf","custom_tag"]
+#   ## list of tag keys to specify, whose values get sent as Riemann tags. If empty, all Telegraf tag values will be sent to Riemann as tags.
+#   # riemann_tag_keys = ["telegraf","custom_tag"]
 
 
 ###############################################################################
