--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -430,6 +430,36 @@
 #   # listen = ":9126"
 
 
+# # Configuration for Riemann server to send metrics to
+# [[outputs.riemann]]
+#   ## Address of the Riemann server
+#   address = "localhost:5555"
+#
+#   ## Transport protocol to use, either tcp or udp
+#   transport = "tcp"
+#
+#   ## Riemann TTL, floating-point time in seconds.
+#   ## Defines how long that an event is considered valid for in Riemann
+#   ttl = 0
+#
+#   ## Separator to use between measurement and field name in Riemann service name
+#   separator = "/"
+#
+#   ## Set measurement name as a Riemann attribute,
+#   ## instead of prepending it to the Riemann service name
+#   # measurement_as_attribute = false
+#
+#   ## A list of tag keys whose values get sent as Riemann tags.
+#   ## If empty, all Telegraf tag values will be sent as tags
+#   # tag_keys = ["telegraf","custom_tag"]
+#
+#   ## Additional Riemann tags to send.
+#   # tags = ["telegraf-output"]
+#
+#   ## Description for Riemann event
+#   # description_text = "metrics collected from telegraf"
+
+
 # # Configuration for the legacy Riemann plugin
 # [[outputs.riemann_legacy]]
 #   ## URL of server
