--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -440,7 +440,7 @@
 #
 #   ## Riemann TTL, floating-point time in seconds.
 #   ## Defines how long that an event is considered valid for in Riemann
-#   ttl = 0
+#   # ttl = 30.0
 #
 #   ## Separator to use between measurement and field name in Riemann service name
 #   separator = "/"
@@ -448,6 +448,10 @@
 #   ## Set measurement name as a Riemann attribute,
 #   ## instead of prepending it to the Riemann service name
 #   # measurement_as_attribute = false
+#
+#   ## Send string metrics as Riemann event states.
+#   ## Unless enabled all string metrics will be ignored
+#   # string_as_state = false
 #
 #   ## A list of tag keys whose values get sent as Riemann tags.
 #   ## If empty, all Telegraf tag values will be sent as tags
