--- a/plugins/inputs/puppetagent/last_run_summary.yaml
+++ b/plugins/inputs/puppetagent/last_run_summary.yaml
@@ -30,5 +30,5 @@
     last_run: 1444936531
     cron: 0.000584
   version:
-    config: "branch:d6018ce"
+    config: "environment:d6018ce"
     puppet: "3.7.5"
