Changes to make it work with basic authentication (Shield) and older versions of ES ( for eg 0.19.9) .Changes to query Nodestats api endpoint by statistics vs the default of all.  (Older versions need all=true speicified explicitly).

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -768,6 +768,12 @@
 #   # ssl_key = "/etc/telegraf/key.pem"
 #   ## Use SSL but skip chain & host verification
 #   # insecure_skip_verify = false
+#   ## Optional for authentication setup with Shield
+#   # username = "admin"
+#   # password = "admin123"
+
+##  ## cluster node stats API . Defaults to all of the options below
+#   #stats = ["indices", "os", "process", "jvm", "thread_pool","fs","transport","http","breakers"]
 
 
 # # Read metrics from one or more commands that can output to stdout
