add clusterstats to elasticsearch input plugin

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -759,8 +759,11 @@
 #   ## within the cluster
 #   local = true
 #
-#   ## set cluster_health to true when you want to also obtain cluster level stats
+#   ## set cluster_health to true when you want to also obtain cluster health stats
 #   cluster_health = false
+#
+#   ## set cluster_stats to true when you want to also obtain cluster level stats
+#   cluster_stats = false
 #
 #   ## Optional SSL Config
 #   # ssl_ca = "/etc/telegraf/ca.pem"
