add clusterstats to elasticsearch input plugin

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -762,9 +762,10 @@
 #   ## set cluster_health to true when you want to also obtain cluster health stats
 #   cluster_health = false
 #
-#   ## set cluster_stats to true when you want to also obtain cluster level stats
-#   cluster_stats = false
-#
+#   ## Set cluster_stats to true when you want to also obtain cluster stats from the Master node.
+#   ## Currently only implemented when local=true
+#   #   cluster_stats = false
+
 #   ## Optional SSL Config
 #   # ssl_ca = "/etc/telegraf/ca.pem"
 #   # ssl_cert = "/etc/telegraf/cert.pem"
