--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -160,7 +160,7 @@
 # # Configuration for AWS CloudWatch output.
 # [[outputs.cloudwatch]]
 #   ## Amazon REGION
-#   region = 'us-east-1'
+#   region = "us-east-1"
 #
 #   ## Amazon Credentials
 #   ## Credentials are loaded in the following order
@@ -178,7 +178,7 @@
 #   #shared_credential_file = ""
 #
 #   ## Namespace for the CloudWatch MetricDatums
-#   namespace = 'InfluxData/Telegraf'
+#   namespace = "InfluxData/Telegraf"
 
 
 # # Configuration for DataDog API to send metrics to.
@@ -623,7 +623,7 @@
 # # Pull Metric Statistics from Amazon CloudWatch
 # [[inputs.cloudwatch]]
 #   ## Amazon Region
-#   region = 'us-east-1'
+#   region = "us-east-1"
 #
 #   ## Amazon Credentials
 #   ## Credentials are loaded in the following order
@@ -641,21 +641,21 @@
 #   #shared_credential_file = ""
 #
 #   ## Requested CloudWatch aggregation Period (required - must be a multiple of 60s)
-#   period = '1m'
+#   period = "1m"
 #
 #   ## Collection Delay (required - must account for metrics availability via CloudWatch API)
-#   delay = '1m'
+#   delay = "1m"
 #
 #   ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid
 #   ## gaps or overlap in pulled data
-#   interval = '1m'
+#   interval = "1m"
 #
 #   ## Configure the TTL for the internal cache of metrics.
 #   ## Defaults to 1 hr if not specified
-#   #cache_ttl = '10m'
+#   #cache_ttl = "10m"
 #
 #   ## Metric Statistic Namespace (required)
-#   namespace = 'AWS/ELB'
+#   namespace = "AWS/ELB"
 #
 #   ## Maximum requests per second. Note that the global default AWS rate limit is
 #   ## 10 reqs/sec, so if you define multiple namespaces, these should add up to a
@@ -666,12 +666,12 @@
 #   ## Defaults to all Metrics in Namespace if nothing is provided
 #   ## Refreshes Namespace available metrics every 1h
 #   #[[inputs.cloudwatch.metrics]]
-#   #  names = ['Latency', 'RequestCount']
+#   #  names = ["Latency", "RequestCount"]
 #   #
 #   #  ## Dimension filters for Metric (optional)
 #   #  [[inputs.cloudwatch.metrics.dimensions]]
-#   #    name = 'LoadBalancerName'
-#   #    value = 'p-example'
+#   #    name = "LoadBalancerName"
+#   #    value = "p-example"
 
 
 # # Gather health check statuses from services registered in Consul
