Enable quiet log in default configuration
Signed-off-by: Pierre Fersing <pierre.fersing@bleemeo.com>

--- a/etc/telegraf_windows.conf
+++ b/etc/telegraf_windows.conf
@@ -46,7 +46,7 @@
   ## Run telegraf in debug mode
   debug = false
   ## Run telegraf in quiet mode
-  quiet = false
+  quiet = true
   ## Specify the log file name. The empty string means to log to stdout.
   logfile = "/Program Files/Telegraf/telegraf.log"
 
