add a hint to possible basic authentication settings

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -777,6 +777,8 @@
 # # Read stats from one or more Elasticsearch servers or clusters
 # [[inputs.elasticsearch]]
 #   ## specify a list of one or more Elasticsearch servers
+#   # you can add username and password to your url to use basic authentication:
+#   # servers = ["http://user:pass@localhost:9200"]
 #   servers = ["http://localhost:9200"]
 #
 #   ## Timeout for HTTP requests to the elastic search server(s)
