--- a/telegraf.conf
+++ b/telegraf.conf
@@ -48,7 +48,7 @@
 
   ## Default flushing interval for all outputs. You shouldn't set this below
   ## interval. Maximum flush_interval will be flush_interval + flush_jitter
-  flush_interval = "10s"
+  flush_interval = "60s"
   ## Jitter the flush interval by a random amount. This is primarily to avoid
   ## large write spikes for users running a large number of telegraf instances.
   ## ie, a jitter of 5s and interval 10s means flushes will happen every 10-15s
@@ -77,54 +77,36 @@
 
 # # Configuration for Wavefront proxy to send metrics to
 [[outputs.wavefront]]
-# prefix = "telegraf."
-  host = "192.168.99.100"
+  ## prefix for metrics keys
+  #prefix = "my.specific.prefix."
+
+  ## DNS name of the wavefront proxy server
+  host = "localhost"
+
+  ## Port that the Wavefront proxy server listens on
   port = 2878
-  metric_separator = "."
-  convert_paths = true
-  use_regex = false
+
+  ## wether to use "value" for name of simple fields
+  #simple_fields = false
+
+  ## character to use between metric and field name.  defaults to . (dot)
+  #metric_separator = "."
+
+  ## Convert metric name paths to use metricSeperator character
+  ## When true (default) will convert all _ (underscore) chartacters in final metric name
+  #convert_paths = true
+
+  ## Use Regex to sanitize metric and tag names from invalid characters
+  ## Regex is more thorough, but significantly slower
+  #use_regex = false
+
+  ## point tags to use as the source name for Wavefront (if none found, host will be used)
+  #source_tags = ["hostname", "snmp_host", "node_host"]
+
 
 ###############################################################################
 #                            INPUT PLUGINS                                    #
 ###############################################################################
-
-# Statsd Server
-#[[inputs.statsd]]
-  ## Address and port to host UDP listener on
-  #service_address = ":8125"
-  ## Delete gauges every interval (default=false)
-  #delete_gauges = false
-  ## Delete counters every interval (default=false)
-  #delete_counters = false
-  ## Delete sets every interval (default=false)
-  #delete_sets = false
-  ## Delete timings & histograms every interval (default=true)
-  #delete_timings = true
-  ## Percentiles to calculate for timing & histogram stats
-  #percentiles = [90]
-
-  ## separator to use between elements of a statsd metric
-  #metric_separator = "_"
-
-  ## Parses tags in the datadog statsd format
-  ## http://docs.datadoghq.com/guides/dogstatsd/
-  #parse_data_dog_tags = false
-
-  ## Statsd data translation templates, more info can be read here:
-  ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md#graphite
-  # templates = [
-  #     "cpu.* measurement*"
-  # ]
-
-  ## Number of UDP messages allowed to queue up, once filled,
-  ## the statsd server will start dropping packets
-  #allowed_pending_messages = 10000
-
-  ## Number of timing/histogram values to track per-measurement in the
-  ## calculation of percentiles. Raising this limit increases the accuracy
-  ## of percentiles but also increases the memory usage and cpu time.
-  #percentile_limit = 1000
-
 
 # Read metrics about cpu usage
 [[inputs.cpu]]
