--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,8 @@ machine:
     - sudo service zookeeper stop
     - go version
     - go version | grep 1.7.4 || sudo rm -rf /usr/local/go
-    - wget https://storage.googleapis.com/golang/go1.7.4.linux-amd64.tar.gz
-    - sudo tar -C /usr/local -xzf go1.7.4.linux-amd64.tar.gz
+    - wget https://storage.googleapis.com/golang/go1.8beta1.linux-amd64.tar.gz
+    - sudo tar -C /usr/local -xzf go1.8beta1.linux-amd64.tar.gz
     - go version
 
 dependencies:
