Adds an 'output_precision' configuration parameter

--- a/etc/telegraf_windows.conf
+++ b/etc/telegraf_windows.conf
@@ -67,7 +67,7 @@
   urls = ["http://localhost:8086"] # required
   # The target database for metrics (telegraf will create it if not exists)
   database = "telegraf" # required
-  # Precision of writes, valid values are "ns", "us" (or "µs"), "ms", "s", "m", "h".
+  # Precision of writes, valid values are "1ns", "1us" (or "1µs"), "1ms", "1s", "1m", "1h".
   # note: using second precision greatly helps InfluxDB compression
   precision = "s"
 
