Changed name of Wavefront source option to source_override

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -101,7 +101,7 @@
   #use_regex = false
 
   ## point tags to use as the source name for Wavefront (if none found, host will be used)
-  #source_tags = ["hostname", "snmp_host", "node_host"]
+  #source_override = ["hostname", "snmp_host", "node_host"]
 
 
 ###############################################################################
