remove unnecessary recommendation

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -764,7 +764,7 @@
 #   cluster_health = false
 #
 #   ## Set cluster_stats to true when you want to obtain cluster stats from the
-#   ## Master node. This is recommended for use only when local = true
+#   ## Master node.
 #   cluster_stats = false
 
 #   ## Optional SSL Config
