add indices and shard stats to elasticsearch input plugin

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -755,16 +755,28 @@
 #   ## Timeout for HTTP requests to the elastic search server(s)
 #   http_timeout = "5s"
 #
-#   ## set local to false when you want to read the indices stats from all nodes
-#   ## within the cluster
+#   ## When local is true (the default), the node will read only its own stats.
+#   ## Set local to false when you want to read the node stats from all nodes
+#   ## of the cluster.
 #   local = true
 #
 #   ## set cluster_health to true when you want to also obtain cluster health stats
 #   cluster_health = false
 #
-#   ## Set cluster_stats to true when you want to also obtain cluster stats from the Master node.
-#   ## Currently only implemented when local=true
-#   #   cluster_stats = false
+#   ## Set cluster_stats to true when you want to obtain cluster stats from the Master node.
+#   cluster_stats = false
+#
+#   ## Set indices_stats to true when you want to obtain indices stats from the Master node.
+#   indices_stats = false
+#
+#   ## Set shards_stats to true when you want to obtain shards stats from the Master node.
+#   ## If set, then indices_stats is considered true as they are also provided with shard stats.
+#   shards_stats = false
+
+#   ## Multiplier of the elasticsearch interval to be used to reduce the frequency of
+#   ## indices_stats and shards_stats reports. The default interval is 10 seconds, and this
+#   ## multiplier is defaulted to 6 to cause these metrics to be taken once per minute by default.
+#   indices_interval_multiplier = 6
 
 #   ## Optional SSL Config
 #   # ssl_ca = "/etc/telegraf/ca.pem"
