--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1879,8 +1879,8 @@
 # [[inputs.statsd]]
 #   ## Address and port to host UDP listener on
 #   service_address = ":8125"
-#   ## Delete gauges every interval (default=false)
-#   delete_gauges = false
+#   ## Delete gauges every interval (default=true)
+#   delete_gauges = true
 #   ## Delete counters every interval (default=false)
 #   delete_counters = false
 #   ## Delete sets every interval (default=false)
