Add tcp listener to statsd input

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1877,6 +1877,10 @@
 
 # # Statsd Server
 # [[inputs.statsd]]
+#   ## Protocol, must be "tcp" or "udp"
+#   protocol = "udp"
+#   ## Maximum number of concurrent TCP connections to allow
+#   max_tcp_connections = 250
 #   ## Address and port to host UDP listener on
 #   service_address = ":8125"
 #   ## Delete gauges every interval (default=false)
