use full URL for Riemann server address
Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -432,11 +432,8 @@
 
 # # Configuration for Riemann server to send metrics to
 # [[outputs.riemann]]
-#   ## Address of the Riemann server
-#   address = "localhost:5555"
-#
-#   ## Transport protocol to use, either tcp or udp
-#   transport = "tcp"
+#   ## The full TCP or UDP URL of the Riemann server
+#   url = "tcp://localhost:5555"
 #
 #   ## Riemann event TTL, floating-point time in seconds.
 #   ## Defines how long that an event is considered valid for in Riemann
