Adding nuspec for d2l

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,9 +24,11 @@ install:
 
 build_script:
   - cmd: C:\GnuWin32\bin\make windows
+  - nuget pack d2l.telegraf.nuspec -version "%APPVEYOR_BUILD_VERSION%" -properties "gitsha=%APPVEYOR_REPO_COMMIT%"
 
 test_script:
   - go vet ./...
 
 artifacts:
   - path: telegraf.exe
+  - path: '*.nupkg'
