Add _stats endpoint to Elasticsearch input
Signed-off-by: Bryan Stone <bstone@datapipe.com>

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -860,6 +860,9 @@
 #   ## Master node.
 #   cluster_stats = false
 #
+#   ## Set indices_stats to true when you want to also obtain statistics on the index level scope.
+#   indices_stats = false
+#
 #   ## Optional SSL Config
 #   # ssl_ca = "/etc/telegraf/ca.pem"
 #   # ssl_cert = "/etc/telegraf/cert.pem"
