Disk counter array newline
Tweak formatting of `LogicalDisk` counter array to have one entry per
line.

--- a/etc/telegraf_windows.conf
+++ b/etc/telegraf_windows.conf
@@ -117,7 +117,8 @@
     Instances = ["*"]
     Counters = [
       "% Idle Time",
-      "% Disk Time","% Disk Read Time",
+      "% Disk Time",
+      "% Disk Read Time",
       "% Disk Write Time",
       "Current Disk Queue Length",
       "% Free Space",
